# meal-calendar

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: meals.py
backend/tests/: conftest.py  test_api_meals.py  test_models.py  test_schemas.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/services/: auth.service.js  meals.service.js
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: meals.js  meals.test.js
frontend/src/components/: Calendar.jsx  Calendar.test.jsx  DatePicker.jsx  DayColumn.jsx  DayColumn.test.jsx  LanguageSwitcher.jsx  MealModal.jsx  MealModal.test.jsx  MealSlot.jsx  MealSlot.test.jsx  Toast.jsx  Toast.test.jsx
frontend/src/i18n/: LanguageContext.jsx  index.js  translations.js
frontend/src/test/: setup.js  test-utils.jsx
frontend/src/utils/: dateUtils.test.js
server/: .bash_history  Dockerfile  Makefile  local.env  mypy.ini  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 1ad55ffdeb02_add_auth_users_table.py  3b121603bb7c_add_user_table.py  b15aa58b12eb_add_meals_meals_unique_constraint.py  dd2bc8862ea5_add_meals.py
server/app/: alembic_base.py  database.py  main.py  settings.py
server/app/auth/: dtos.py  endpoints.py  factories.py  models.py  oauth2.py  (+1 more)
(+31 files in other folders)
